Revert "[CSS] Fix menu on mobile (#124)"
This reverts commit 0e3de9ce013b3389e3de60af920123e44a2725e8.

--- a/src/assets/stylesheets/extensions/_select2.scss
+++ b/src/assets/stylesheets/extensions/_select2.scss
@@ -332,7 +332,7 @@
 
 .version-selector + .select2.select2-container {
   display: block;
-  margin-left: 38%;
+  margin-left: 40%;
   margin-top: -22px;
   .select2-selection__rendered {
     margin-top: 10px;
