--- a/src/assets/stylesheets/layout/_header.scss
+++ b/src/assets/stylesheets/layout/_header.scss
@@ -34,10 +34,6 @@
   @media print {
     display: none;
   }
-  
-  @include break-to-device(tablet) {
-    height: 5rem;    
-  }
 }
 
 // Navigation within header
